--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="social-links text-center"><!-- 
       <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a> -->
       <a href="#" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
-      <a href="itx_mursleen11" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+      <a href="https://www.instagram.com/itx_mursleen11" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
       <!-- <a href="#" class="google-plus"><i class="bi bi-skype"></i></a> -->
       <a href="https://www.linkedin.com/in/mursleen-mushtaq-242556181/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
     </div>
