--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="social-links text-center"><!-- 
       <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a> -->
-      <a href="#" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
+      <a href="https://www.facebook.com/mursleenmushtaq.prince/" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
       <a href="https://www.instagram.com/itx_mursleen11" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
       <!-- <a href="#" class="google-plus"><i class="bi bi-skype"></i></a> -->
       <a href="https://www.linkedin.com/in/mursleen-mushtaq-242556181/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
@@ -98,7 +98,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>MURSLEEN MUSHTAQ</h2>
-        <p>I'm <span class="typed" data-typed-items="Web Developer,App Developer, Freelancer, Photographer">Software Engineer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm <span class="typed" data-typed-items="Web Developer,App Developer, Freelancer, Software Developer">Software Engineer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -109,7 +109,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Pursuing Computer Science at Lahore Leads University. Passionate about Frontend Development, aiming to excel in a reputable organization, contributing to personal growth and national advancement.</p>
+        <p>I am a Computer Science graduate from Lahore Leads University with a strong passion for Frontend Development & Backend Development. I specialize in building responsive and user-friendly web interfaces using modern technologies. I aim to grow within a dynamic and reputable organization where I can apply my skills, contribute to impactful projects, and support innovation. My drive for continuous learning and commitment to excellence motivates me to play a valuable role in both organizational success and national progress .</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -139,7 +139,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mursleenmushtaq237@gmail.com</span></li>
                 </ul>
@@ -320,7 +320,7 @@
               <ul>
                 <li>Defence Raya Lahore</li>
                 <li>+92 3053135437</li>
-                <li>https://agilitize.com.pk/</li>
+                <!-- <li>https://agilitize.com.pk/</li> -->
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -403,12 +403,12 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/blaze-app.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>OHH Asset Tracking App</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="OHH Asset Tracking App" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <!-- <p>Lorem ipsum, dolor sit amet consectetur</p> -->
+                  <a href="assets/img/portfolio/blaze-app.jpg" title="OHH Asset Tracking App" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -418,21 +418,19 @@
                 <img src="assets/img/portfolio/PhysicianManagement.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Kaul Associates In React Js</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/PhysicianManagement.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/Student-Ms.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Student Management System</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="assets/img/portfolio/Student-Ms.jpeg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -451,12 +449,12 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/work-order-app.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>SEMMAPP Work Order App</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-2.jpg" title="SEMMAPP Work Order App" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <!-- <p>Lorem ipsum, dolor sit amet consectetur</p> -->
+                  <a href="assets/img/portfolio/work-order-app.jpg" title="SEMMAPP Work Order App" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -466,21 +464,19 @@
                 <img src="assets/img/portfolio/PhysicianManagement.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Kaul Associates In Angular js</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/PhysicianManagement.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/tagMangement.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Tag Management System</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/branding-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="assets/img/portfolio/tagMangement.png" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -511,24 +507,22 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/agiltiztiz-website.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>AGILITIZE Website</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-3.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="assets/img/portfolio/agiltiztiz-website.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/Home-Ms.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Budget Management System</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/branding-3.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="assets/img/portfolio/Home-Ms.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
