--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/PhysicianManagement.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Kaul Associates In React Js</h4>
+                  <h4>Roster Management/HR In React Js</h4>
                   <a href="assets/img/portfolio/PhysicianManagement.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
                 </div>
@@ -451,9 +451,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/work-order-app.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>SEMMAPP Work Order App</h4>
+                  <h4>Sugar Industry Solutions Work Order App</h4>
                   <!-- <p>Lorem ipsum, dolor sit amet consectetur</p> -->
-                  <a href="assets/img/portfolio/work-order-app.jpg" title="SEMMAPP Work Order App" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/work-order-app.jpg" title="Sugar Industry Solutions Work Order App" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
@@ -463,7 +463,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/PhysicianManagement.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Kaul Associates In Angular js</h4>
+                  <h4>Roster Management/HR In Angular js</h4>
                   <a href="assets/img/portfolio/PhysicianManagement.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
                 </div>
