--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - iPortfolio Bootstrap Template</title>
+  <title>Mursleen - Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/icon.jpg" rel="icon">
+  <link href="assets/img/icon.jpg" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -42,7 +42,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/Dev_Pro.jpeg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/myprfile.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -51,13 +51,15 @@
       <h1 class="sitename">MURSLEEN MUSHTAQ</h1>
     </a>
 
-    <div class="social-links text-center"><!-- 
-      <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a> -->
-      <a href="https://www.facebook.com/mursleenmushtaq.prince/" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
-      <a href="https://www.instagram.com/itx_mursleen11" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
-      <!-- <a href="#" class="google-plus"><i class="bi bi-skype"></i></a> -->
+    <div class="social-links text-center">
+     <!--  <a href="https://www.facebook.com/mursleenmushtaq.prince/" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a> -->
+     <!--  <a href="https://www.instagram.com/itx_mursleen11" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a> -->
       <a href="https://www.linkedin.com/in/mursleen-mushtaq-242556181/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+      <a href="https://teams.microsoft.com/l/chat/0/0?users=mursleenmushtaq237@gmail.com" class="microsoft-teams" target="_blank">
+        <i class="bi bi-microsoft-teams""></i>
+      </a>
     </div>
+
 
     <nav id="navmenu" class="navmenu">
       <ul>
@@ -130,7 +132,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 Feb 2004</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>2 Feb 2004</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://mursleenportfolio.vercel.app/</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+92 3053135437</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lahore, Pakistan</span></li>
@@ -218,16 +220,22 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>HTML</span> <i class="val">100%</i></span>
+              <span class="skill"><span>REACT JS</span> <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="85"></div>
+              </div>
+            </div><!-- End Skills Item -->
+            <div class="progress">
+              <span class="skill"><span>C #</span> <i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="85"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>CSS</span> <i class="val">90%</i></span>
+              <span class="skill"><span>ASP .NET CORE</span> <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -238,13 +246,13 @@
               </div>
             </div><!-- End Skills Item -->
             <div class="progress">
-              <span class="skill"><span>ASP .Net</span> <i class="val">75%</i></span>
+              <span class="skill"><span>CSS</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
             <div class="progress">
-              <span class="skill"><span>SQL MICROSOFT SERVER</span> <i class="val">60%</i></span>
+              <span class="skill"><span>Bootstrap</span> <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -255,27 +263,27 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>jQuery</span> <i class="val">80%</i></span>
+              <span class="skill"><span>REACT NATIVE</span> <i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>SQL</span> <i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+            <div class="progress">
+              <span class="skill"><span>HTML</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Bootstrap</span> <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-            <div class="progress">
-              <span class="skill"><span>React js</span> <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>C #</span> <i class="val">55%</i></span>
+              <span class="skill"><span>jQuery</span> <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -346,7 +354,7 @@
             <div class="resume-item">
               <h4>AGILITIZE Software House</h4>
               <h5>2024 - Present</h5>
-              <p><em>DHA PHASE 6 (RAYA GOLF CLUB) Lahore Pakistan </em></p>
+              <p><em>CP 45, 1st Floor Fairways Commercial, DHA Phase VI, Lahore, Pakistan </em></p>
               <ul>
                 <li>Developed responsive web applications using React.js, ensuring seamless user experiences.</li>
                 <li>Developed mobile applications using React Native, delivering high-quality cross-platform apps. </li>
@@ -664,7 +672,7 @@
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
-                  <h3>Call Us</h3>
+                  <h3>Call Us 24/7</h3>
                   <p>+923053135437</p>
                 </div>
               </div><!-- End Info Item -->
@@ -672,7 +680,7 @@
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
-                  <h3>Email Us</h3>
+                  <h3> Make a query:</h3>
                   <p>mursleenmushtaq237@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
