--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
-                  <h3>Call Us 24/7</h3>
+                  <h3>Call Now:</h3>
                   <p>+923053135437</p>
                 </div>
               </div><!-- End Info Item -->
